--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.3",
-    "nativewind": "^2.0.11",
+    "nativewind": "4.0.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-heroicons": "^4.0.0",
     "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
     "react-native-snap-carousel": "^3.9.1",
